# vktest

./: .gitignore  .gitmodules  CMakeLists.txt
base/: CMakeLists.txt  VulkanDebug.cpp  VulkanTexture.cpp  VulkanTexture.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  vulkanexamplebase.cpp  vulkanexamplebase.h
cmake/: FindXimea.cmake
data/cameras/calibration/: config.json
data/shaders/glsl/calibration/: edgedetect.comp  edgedetect.comp.spv  emboss.comp  emboss.comp.spv  sharpen.comp  sharpen.comp.spv  texture.frag  texture.frag.spv
data/shaders/glsl/color_correction/: triangle.vert  triangle.vert.spv
data/shaders/glsl/pipeline/: calibrate.comp  calibration.comp.spv  colorize.comp  colorize.comp.spv  correction.comp  correction.comp.spv  demosaic.comp  demosaic.comp.spv  hc2srgb.comp  hc2srgb.comp.spv  remosaic.comp  remosaic.comp.spv  texture.frag  textureHypercube.frag  textureHypercube.frag.spv
plugins/: CMakeLists.txt
plugins/calibration/: calibration.cpp
python/run_tests/: 00_Calibration.py  01_Demosaic.py  02_Correction.py  03_Colorize.py  imgui.ini
src/calibration/: calibration.cpp
src/camera_grabber/: CMakeLists.txt  camera_grabber.cpp  camera_grabber.h  image_grabber.cpp  image_grabber.h  webcam_grabber.cpp  webcam_grabber.h  ximea_grabber.cpp  ximea_grabber.h
src/color_correction/: color_correction.cpp
src/pipeline/: CMakeLists.txt  pipeline.cpp  pipeline.h  tables.h
src/viewer/: CMakeLists.txt  viewer.cpp  viewer.h
tests/: tests.txt
tests/00_calibration/: CMakeLists.txt  calibration.cpp  calibration.h
tests/01_demosaic/: CMakeLists.txt  demosaic.cpp  demosaic.h
tests/02_correction/: CMakeLists.txt  correction.cpp  correction.h
tests/03_colorize/: CMakeLists.txt  colorize.cpp  colorize.h
tests/04_experimental/: CMakeLists.txt  example.cpp
